--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Tic Tac Toe</h1>
+        <div class="player1"><div class="p1-score"></div></div>
+        <div class="game">
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+            <div class="cell" data></div>
+        </div>
+        <div class="player2"><div class="p2-score"></div></div>
     <script src="script.js"></script>
 </body>
 </html>
