--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div class="cell" data></div>
         </div>
         <div class="player2"><div class="p2-score"></div></div>
+        <div class="reset">Reset</div>
+        <div class="exit">Main Menu</div>
     <script src="script.js"></script>
 </body>
 </html>
