--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settings:
+            'FILL' 0,
+            'wght' 400,
+            'GRAD' 0,
+            'opsz' 24
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -22,8 +32,7 @@
             <div class="cell" data></div>
         </div>
         <div class="player2"><div class="p2-score"></div></div>
-        <div class="reset">Reset</div>
-        <div class="exit">Main Menu</div>
+        <div class="menu"><span class="material-symbols-outlined">Menu</span></div>
     <script src="script.js"></script>
 </body>
 </html>
