edit html and css to revert to past changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
     <div class="container">
         <h1>Tic Tac Toe</h1>
         <div class="player1"><div class="p1-score"></div></div>
-        <div class="game-board-div"></div>
+        <div class="game-board-div">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
         <div class="player2"><div class="p2-score"></div></div>
         <div class="menu"><span class="material-symbols-outlined">Menu</span></div>
     <script src="script.js"></script>
