--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <h1>Tic Tac Toe</h1>
         <div class="player1"><div class="p1-score"></div></div>
         <div class="game-board-div">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell" data-column="0" data-row="0"></div>
+            <div class="cell" data-column="1" data-row="0"></div>
+            <div class="cell" data-column="2" data-row="0"></div>
+            <div class="cell" data-column="0" data-row="1"></div>
+            <div class="cell" data-column="1" data-row="1"></div>
+            <div class="cell" data-column="2" data-row="1"></div>
+            <div class="cell" data-column="0" data-row="2"></div>
+            <div class="cell" data-column="1" data-row="2"></div>
+            <div class="cell" data-column="2" data-row="2"></div>
         </div>
         <div class="player2"><div class="p2-score"></div></div>
         <div class="menu"><span class="material-symbols-outlined">Menu</span></div>
