Update fonts and game title styling

--- a/main_game.html
+++ b/main_game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap">
     <style>
         .material-symbols-outlined {
             font-variation-settings:
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <h1><span class="yellow-txt">tic.</span><span class="blue-txt">tac.</span><span class="yellow-txt">toe.</span></h1>
+        <div class="game-title"><div class="yellow-txt">tic.</div><div class="blue-txt">tac.</d><div class="yellow-txt">toe.</div></div>
     </div>
     <div class="restart-btn">Restart</div>
     <script src="script.js"></script>
