Update player names and add player turn indicator

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="greet"></div>
                     <div class="turn-indicator"></div>
                     <div class="new-game-btn">New Game</div>
+                    <div class="player-turn-indicator"></div>
                 </div>
             </div>
         </div>
