Add draw indicator and update game over logic

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                 </div>
                 <div class="controller">
                     <div class="greet"></div>
+                    <div class="draw-indicator">Draw</div>
+                    <div class="win-indicator"></div>
                     <div class="turn-indicator"></div>
                     <div class="new-game-btn">New Game</div>
                     <div class="player-turn-indicator"></div>
