Update font and button styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <style>
         .material-symbols-outlined {
             font-variation-settings:
@@ -51,11 +51,10 @@
                 </div>
                 <div class="controller">
                     <div class="greet"></div>
-                    <div class="draw-indicator">Draw</div>
-                    <div class="win-indicator"></div>
-                    <div class="turn-indicator"></div>
-                    <div class="new-game-btn">New Game</div>
-                    <div class="player-turn-indicator"></div>
+                    <div class="draw-indicator btns">Draw</div>
+                    <div class="win-indicator btns"></div>
+                    <div class="turn-indicator btns"></div>
+                    <div class="new-game-btn btns">New Game</div>
                 </div>
             </div>
         </div>
